<resources>
    <string name="app_name">Citas Médicas</string>
    <string name="patients">Pacientes</string>
    <string name="appointments">Citas</string>
    <string name="appointment">Cita</string>
    <string name="add_patient">Agregar paciente</string>
    <string name="update_patient">Actualizar paciente</string>
    <string name="last_update">Última actualización</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellido paterno</string>
    <string name="mothers_last_name">Apellido materno</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="sex">Sexo</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="allergies">Alergias</string>
    <string name="id">ID</string>
    <string name="patient_id">ID Paciente</string>
    <string name="appointment_id">ID Cita</string>
    <string name="search_patient">Buscar paciente por nombre…</string>
    <string name="appointment_date">Fecha de cita</string>
    <string name="appointment_time">Hora de cita</string>
    <string name="add_appointment">Agregar cita</string>
    <string name="search_appointment">Buscar cita por ID…</string>
    <string name="men">H</string>
    <string name="woman">M</string>
    <string name="update">Actualizar</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="failed_to_update_patient">Error al actualizar paciente.</string>
    <string name="patient_updated">Paciente actualizado.</string>
    <string name="patient_added_or_updated">Paciente agregado/actualizado.</string>
    <string name="failed_to_add_patient">Error al agregar paciente.</string>
    <string name="there_are_still_empty_fields">Aún quedan campos vacíos.</string>
    <string name="failed_to_query_the_data">Error al consultar los datos.</string>
    <string name="without_results">Sin resultados.</string>
    <string name="number_of_patients">Número de pacientes</string>
    <string name="patients_found">Pacientes encontrados</string>
    <string name="delete">Eliminar</string>
    <string name="are_you_sure_of">Está seguro de</string>
    <string name="failed_to_remove_patient">Error al eliminar paciente.</string>
    <string name="patient_removed">Paciente eliminado.</string>
    <string name="full_name">Nombre completo</string>
    <string name="go_to_settings">Ir a configuración</string>
    <string name="no_network_connection">Sin conexión de red.</string>
    <string name="this_field_is_required">Este campo es obligatorio.</string>
    <string name="see_quotes">Ver citas</string>
    <string name="update_appointment">Actualizar cita</string>
    <string name="appointment_added_or_updated">Cita agregada/actualizada.</string>
    <string name="failed_to_add_appointment">Error al agregar la cita.</string>
    <string name="appointment_updated">Cita actualizada.</string>
    <string name="failed_to_update_appointment">Error al actualizar la cita.</string>
    <string name="appointments_found">Citas encontradas</string>
    <string name="appointment_removed">Cita eliminada.</string>
    <string name="failed_to_remove_appointment">Error al eliminar la cita.</string>
    <string name="number_of_appointments">Número de citas</string>
    <string name="you_must_select_a_gender">Debe seleccionar un genero.</string>
    <string name="existing_id">El ID que intenta ingresar ya está siendo usado por un paciente. Ingrese otro diferente por favor.</string>
    <string name="help_text_for_id_field">Si ingresa un ID existente, este último se actualizará.</string>
    <string name="unknown">Desconocido</string>
    <string name="failed_to_get_all_patient_ids">Error al obtener todos los ids de los pacientes.</string>
</resources>