<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_min"
    android:backgroundTint="@color/gray_50"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/common_padding_max">

    <LinearLayout
        android:id="@+id/llTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/full_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="@string/date_of_birth" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="@string/sex" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="@string/height" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="@string/weight" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAllergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="@string/allergies" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvIDPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_padding_min"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic"
            tools:text="@string/id" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>