<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_min"
    android:backgroundTint="@color/gray_50"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/common_padding_max">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvIDAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/appointment_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvIDPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/patient_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAppointmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="@string/appointment_date" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAppointmentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="@string/appointment_time" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>